<resources>
    <string name="app_name">NotesApplication</string>
    <string name="navigation_screen">Navigation Screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="created">Created : </string>
    <string name="add_note">Add Note</string>
    <string name="notes">Notes</string>
    <string name="edit_delete_note">Edit/Delete Note</string>
    <string name="validation_str">Title and Description are mandatory fields.</string>
    <string name="hint_title">Title *</string>
    <string name="hint_description">Description *</string>
    <string name="hint_image_url">Image url</string>
</resources>